<resources>
    <string name="app_name">BUVGM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo_electronico_hint">Correo electronico</string>
    <string name="contraseña_hint">Contraseña</string>
    <string name="iniciar_sesion_button">Iniciar Sesion</string>
    <string name="registrarse_button">Registrarse</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="usuario">Usuario</string>
    <string name="ingresoPSWtxt">Ingrese su contraseña</string>
    <string name="ingresoUSCORtxt">Ingrese su correo o usuario</string>
    <string name="ingresoOnlyUsTxt">Ingrese su usuario</string>
    <string name="ingresoCorNuevoTxt">Ingrese su correo</string>
    <string name="ConfirmacionPSW">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="Search_hint">Buscar</string>
    <string name="registro_tittle_tool">Registro</string>
    <string name="BUVGM_APP">BUVGM</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="Settings">Configuracion</string>
    <string name="Theme">Theme</string>
    <string name="Theme_mode">Night Mode</string>
    <string name="LogOut">Cerrar Sesion</string>
    <string name="Logout">Log out</string>
    <string name="New_product">Producto Nuevo</string>
    <string name="Nombre_producto">Nombre del Producto</string>
    <string name="Precio_producto">Precio del Producto</string>
    <string name="Contacto">Escriba su numero de telefono o donde desea ser contactado</string>
    <string name="Descripcion_producto">Descripcion del Producto</string>
    <string name="New_image">Importar imagen</string>
    <string name="Cancel">Cancelar</string>
    <string name="Listo">LISTO</string>
    <string name="Producto">Producto</string>
    <string name="Nombre">Nombre</string>
    <string name="Precio">Q. Precio</string>
    <string name="Telefono">Telefono</string>
    <string name="Descripcion">Descripcion</string>
    <string name="text_new_Profile_img">Presione para subir una imagen</string>
    <string name="err_login">Correo o contraseña incorrectos</string>
    <string name="error_character_not_found">Error, Producto no encontrado</string>
    <string name="ID">Coloque un numero aleatorio de 4 digitos</string>

</resources>